# pixelate

./: .gdb_history  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  pixelate.cpp  use_ftxui.cpp
pixelator/: CMakeLists.txt  drawer.cpp  drawer.hpp  image.cpp  image.hpp  pixelate_image.cpp  pixelate_image.hpp  stb_image_data_view.cpp  stb_image_data_view.hpp
